--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.yzzer</groupId>
-    <artifactId>javaf</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>algorithm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,6 +13,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -35,5 +36,4 @@
             <version>3.12.0</version>
         </dependency>
     </dependencies>
-
 </project>
